--- a/index.html
+++ b/index.html
@@ -1,9 +1,28 @@
-<h1>JavaScript Objectball</h1>
-<p>
-  Open your Chrome dev tools to see console output and trigger the debugger to
-  catch.
-</p>
+<!DOCTYPE html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title></title>
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="" />
+  </head>
+  <body>
+    <!--[if lt IE 7]>
+      <p class="browsehappy">
+        You are using an <strong>outdated</strong> browser. Please
+        <a href="#">upgrade your browser</a> to improve your experience.
+      </p>
+    <![endif]-->
 
-<script src="./src/00-objectball.js"></script>
-<!-- <script src="./src/01-simple-debug.js"></script> -->
-<!-- <script src="./src/02-advanced-debug.js"></script> -->
+    <script src="" async defer></script>
+    <script src="./src/00-objectball.js"></script>
+    <!-- <script src="./src/01-simple-debug.js"></script> -->
+    <!-- <script src="./src/02-advanced-debug.js"></script> -->
+  </body>
+</html>
